Worldgen, JEI, Lock Tooltips, Easy Lock Fixes
Added handle width to the lockpicking gui to fix JEI
Added config for world generated lock pins
Added config for automatically orienting placed locks
Fixed easy lock on doors, doors are awful
Added lang (probably temporary) for blast types
Added blast resistance tooltips on locks

--- a/src/main/resources/assets/locks/lang/en_us.lang
+++ b/src/main/resources/assets/locks/lang/en_us.lang
@@ -50,6 +50,9 @@ locks.subtitle.shock=Sudden electric zap
 # Tooltips
 locks.tooltip.id=ID: %s
 locks.tooltip.length=Length: %s
+locks.tooltip.resistance.weak=Blast Resistance: Weak
+locks.tooltip.resistance.strong=Blast Resistance: Strong
+locks.tooltip.resistance.supreme=Blast Resistance: Supreme
 locks.tooltip.strength=Strength: %s
 
 # Status messages
